--- a/home.html
+++ b/home.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="simple website ">
+    <meta name="keywords" content="coffe">
+    <meta name="author" content="mostafa (from Engine-m team)">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="home.css">
     <title>brand</title>
 </head>
 <body>
-    <h1>test</h1>
-    <h2>test</h2>
+<!--creating a header tag that ccontain logo and web-page links and opening and closing tag -->
+<header>
+    <div class="container">
+        <nav>
+            <div><a href="#" class="logo">logo</a></div>
+            <div class="open-meun" id="opn"><i class="fas fa-bars menu-btn"></i></div>
+        <!-- creating a un ordered list and closing menu-->
+            <ul class="menu-links" id="ull">
+                <div class="close-menu" id="cls"><i class="fas fa-times close-btn"></i></div>
+                <li><a href="link-1.html">sww</a></li>
+                <li><a href="link-2.html">ydd</a></li>
+                <li><a href="link-3.html">zdd</a></li>
+                <li><a href="link-4.html">cdd</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<section class="main">
+ <div class="m-container">  
+     <h1>head of the keywords</h1>
+     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia nam hic accusantium necessitatibus labore velit quas doloribus modi quod expedita veniam repudiandae, atque repellendus, deserunt commodi consectetur, eligendi deleniti dolore?</p>
+     <button>order</button>
+ </div>
+</section>
+<footer>
+    
+</footer>
+<script src="home.js"></script>
 </body>
 </html>
